Problem with jumping Navbar solved

--- a/src/components/Jobs/Jobs.module.css
+++ b/src/components/Jobs/Jobs.module.css
@@ -1,3 +1,7 @@
+body{
+  height: 100vh;
+  margin: 10px;
+}
 .container {
   margin-right: auto;
   margin-left: auto;
@@ -9,6 +13,7 @@
   width: 100%;
   max-width: 100%;
   font-size: small;
+  height: 110vh;
 }
 
 .row{
